Added a home page with links to various platforms

--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bank Generator</title>
+	<title>SP4CEBAR</title>
 	<link rel="stylesheet" href="./styles/styles.css">
 	<style>
 	</style>
 </head>
 <body>
-	<div>
-		<label for="amountInput">amount</label>
-		<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-		<label for="inputSizesInput">inputSizes</label>
-		<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-		<label for="outputSizesInput">outputSizes</label>
-		<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
-	</div>
-	<label for="codeInput">code input</label>
-	<textarea name="codeInput" cols="40" rows="5" placeholder="([x, y]) => {return [x + y];}"></textarea>
-	<button>Generate</button>
+	<h1>SP4CEBAR.com</h1>
+	<a href="./memory_bank.html">Memory bank generator</a>
+	<a href="https://www.youtube.com/@SP4CEBAR">YouTube</a>
+	<a href="https://www.instagram.com/sp4cebar_systems/">Instagram</a>
+	<a href="https://github.com/SP4CEBARsystems">GitHub</a>
+	<a href="https://lowresnx.inutilis.com/user.php?id=1134">LowresNX</a>
 	<p></p>
 	<script type="module" src="./js/index.js"></script>
 </body>
