Added code blocks with copying functionality, fixed a ts extension that was supposed to be js, added semantic html tags, centered the page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 	</style>
 </head>
 <body>
-	<h1>SP4CEBAR.com</h1>
-	<a href="./memory_bank.html">Memory bank generator</a>
-	<a href="https://www.youtube.com/@SP4CEBAR">YouTube</a>
-	<a href="https://www.instagram.com/sp4cebar_systems/">Instagram</a>
-	<a href="https://github.com/SP4CEBARsystems">GitHub</a>
-	<a href="https://lowresnx.inutilis.com/user.php?id=1134">LowresNX</a>
-	<p></p>
+	<header>
+
+	</header>
+	<main>
+		<section>
+			<h1>SP4CEBAR.com</h1>
+			<h2>Tools</h2>
+			<a href="./bank_generator.html">Survivalcraft Memory Bank Data generator</a>
+		</section>
+	</main>
+	<footer>
+		<aside>
+			<h2>Sandbox Game Creations</h2>
+			<a href="https://www.youtube.com/@SP4CEBAR">YouTube</a>
+			<a href="https://www.instagram.com/sp4cebar_systems/">Instagram</a>
+			<h2>Software</h2>
+			<a href="https://github.com/SP4CEBARsystems">GitHub</a>
+			<a href="https://lowresnx.inutilis.com/user.php?id=1134">LowresNX</a>
+		</aside>
+	</footer>
 	<script type="module" src="./js/index.js"></script>
 </body>
 </html>
