Copying now supports multiple code blocks

--- a/bank_generator.html
+++ b/bank_generator.html
@@ -25,12 +25,18 @@
 			<label for="codeInput">code input</label>
 			<textarea name="codeInput" cols="40" rows="5" placeholder="([x, y]) => {return [x + y];}"></textarea>
 			<button>Generate</button>
+			<div id="bank-data-output"></div>
 			<p></p>
-			<pre>
+			<pre class="code-block-root">
 				<button class="copy-btn">Copy</button>
-				<code id="code-block">
-		const message = "Hello, world!";
-		console.log(message);
+				<code class="code-block">
+message1
+				</code>
+			</pre>
+			<pre class="code-block-root">
+				<button class="copy-btn">Copy</button>
+				<code class="code-block">
+message2
 				</code>
 			</pre>
 		</section>
