--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 	<header>
-
+		<nav>
+			<a href="./bank_generator.html">Survivalcraft Memory Bank Data generator</a>
+		</nav>
+		<h1>SP4CEBAR.com</h1>
 	</header>
 	<main>
+		<hr />
 		<section>
-			<h1>SP4CEBAR.com</h1>
-			<h2>Tools</h2>
-			<a href="./bank_generator.html">Survivalcraft Memory Bank Data generator</a>
 		</section>
 	</main>
 	<footer>
