--- a/bank_generator.html
+++ b/bank_generator.html
@@ -35,6 +35,40 @@
 			<hr />
 			<div id="bank-data-output"></div>
 		</section>
+		<!-- define symbol in hidden svg document -->
+		<svg style="display: none" version="2.0">
+			<defs>
+			<symbol id="circle-arrow-left" viewbox="0 -10 100 110">
+				<path d="m 20 80 A 40 40 0 1 0 20 20"
+				fill="none" stroke="#000" stroke-width="10" />
+				<path d="M 10 0 v 40 h 40"
+				fill="#000" />
+			</symbol>
+			</defs>
+			<!-- to make the circle-arrow-left.svg file
+				also usable as image: -->
+			<use href="#circle-arrow-left"/>
+		</svg>
+		
+		<!-- use symbol of external svg document -->
+		<button>
+			<svg width="50" height="50" version="2.0">
+			<use href="#circle-arrow-left" />
+			</svg>
+		</button>
+		
+		<!-- transform symbol with horizontal flip -->
+		<button>
+			<svg style="transform: scale(-1, 1)" width="50" height="50" version="2.0">
+			<use href="#circle-arrow-left" />
+			</svg>
+		</button>
+		<!-- transform symbol with horizontal flip -->
+		<button>
+			<svg style="transform: scale(-1, 1)" width="50" height="50" version="2.0">
+			<use href="#circle-arrow-left" />
+			</svg>
+		</button>
 	</main>
 	<footer></footer>
 	<script type="module" src="./js/memory_bank.js"></script>
