turned the SVG buttons into divs as they are just displays

--- a/bank_generator.html
+++ b/bank_generator.html
@@ -51,24 +51,18 @@
 		</svg>
 		
 		<!-- use symbol of external svg document -->
-		<button>
+		<div class="white">
 			<svg width="50" height="50" version="2.0">
 			<use href="#circle-arrow-left" />
 			</svg>
-		</button>
+		</div>
 		
 		<!-- transform symbol with horizontal flip -->
-		<button>
+		<div class="white">
 			<svg style="transform: scale(-1, 1)" width="50" height="50" version="2.0">
 			<use href="#circle-arrow-left" />
 			</svg>
-		</button>
-		<!-- transform symbol with horizontal flip -->
-		<button>
-			<svg style="transform: scale(-1, 1)" width="50" height="50" version="2.0">
-			<use href="#circle-arrow-left" />
-			</svg>
-		</button>
+		</div>
 	</main>
 	<footer></footer>
 	<script type="module" src="./js/memory_bank.js"></script>
