--- a/bank_generator.html
+++ b/bank_generator.html
@@ -36,11 +36,7 @@
 			<div id="bank-data-output"></div>
 		</section>
 
-		<svg width="500" height="500" version="2.0">
-			<image y="0" href="assets/bank_generator_circuit_tiles/bank_digit.jpg" width="212" height="127"/>
-			<image y="127" href="assets/bank_generator_circuit_tiles/bank_digit.jpg" width="212" height="127"/>
-			<image y="127" x="212" href="assets/bank_generator_circuit_tiles/bank_selector_8-bit.jpg" width="212" height="127"/>
-		</svg>
+		<svg width="500" height="500" version="2.0" id="reference-circuit"></svg>
 
 		<!-- define symbol in hidden svg document -->
 		<!-- <svg style="display: none" version="2.0">
