Added a html section around the circuit with a header, updated the todo

--- a/bank_generator.html
+++ b/bank_generator.html
@@ -36,7 +36,10 @@
 			<div id="bank-data-output"></div>
 		</section>
 
-		<svg width="5000" height="5000" version="2.0" id="reference-circuit"></svg>
+		<section>
+			<h2>Circuit</h2>
+			<svg width="5000" height="5000" version="2.0" id="reference-circuit"></svg>
+		</section>
 
 		<!-- define symbol in hidden svg document -->
 		<!-- <svg style="display: none" version="2.0">
