Added support for data type strings, the strings have a value assigned to them, they can also be suffixed with a value to enforce that value

--- a/bank_generator.html
+++ b/bank_generator.html
@@ -39,6 +39,7 @@
 		<section>
 			<h2>Circuit</h2>
 			<svg width="5000" height="5000" version="2.0" id="reference-circuit"></svg>
+			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 
 		<!-- define symbol in hidden svg document -->
