Added a bank statistics html paragraph element

--- a/bank_generator.html
+++ b/bank_generator.html
@@ -33,9 +33,11 @@
 			</div>
 			<button>Generate</button>
 			<hr />
+			<p id="bank-statistics"></p>
+		</section>
+		<section>
 			<div id="bank-data-output"></div>
 		</section>
-
 		<section>
 			<h2>Circuit</h2>
 			<svg width="5000" height="5000" version="2.0" id="reference-circuit"></svg>
