--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SP4CEBAR</title>
+	<link rel="icon" href="./assets/memory_bank_asset.png">
 	<link rel="stylesheet" href="./styles/styles.css">
 	<style>
 	</style>
