--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</section>
 		<section>
 			<h2>Circuit</h2>
-			<svg width="5000" height="5000" version="2.0" id="reference-circuit"></svg>
+			<svg width="0" height="0" version="2.0" id="reference-circuit"></svg>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 
@@ -71,5 +71,22 @@
 	</main>
 	<footer></footer>
 	<script type="module" src="./js/memory_bank.js"></script>
+
+	
+
+    <h2>JavaScript Function Sandbox</h2>
+    <p>Enter an unnamed function (e.g., (x, y) => x + y;), provide inputs, and run.</p>
+
+    <textarea id="codeInput">(x, y) => x + y;</textarea>
+    <br>
+    <label>Argument 1:</label> <input type="text" id="arg1" value="5">
+    <label>Argument 2:</label> <input type="text" id="arg2" value="3">
+    <button id="runUserFunction">Run Function</button>
+
+    <iframe id="sandbox" sandbox="allow-scripts"></iframe>
+
+    <p>Output: <span id="output">N/A</span></p>
+
+	<script type="module" src="./js/code_sandbox.js"></script>
 </body>
 </html>
