Added automatic circuit SVG scaling, disabled functionTesting (a testing tool)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</section>
 		<section>
 			<h2>Circuit</h2>
-			<svg width="0" height="0" version="2.0" id="reference-circuit"></svg>
+			<svg version="2.0" id="reference-circuit"></svg>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 
