renamed memory_bank.js to index.js

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 		</div> -->
 	</main>
 	<footer></footer>
-	<script type="module" src="./js/memory_bank.js"></script>
-	<!-- <script type="module" src="./js/code_sandbox.js"></script> -->
+	<script type="module" src="./js/index.js"></script>
 </body>
 </html>
