Refactored the callbackHost, and fixed one of the bugs in custom types: the unsigned integer types now produce something that resembles it but may not be correct

--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@
 			<button>Generate</button>
 			<hr />
 			<p id="bank-statistics"></p>
-
-			
-			<label>Argument 1:</label> <input type="text" id="arg1" value="5">
-			<label>Argument 2:</label> <input type="text" id="arg2" value="3">
-			<button id="runUserFunction">Run Function</button>
-		
-			<iframe id="sandbox" sandbox="allow-scripts"></iframe>
-		
 			<p>Output: <span id="output">N/A</span></p>
+			<h3>Iframe</h3>
+			<iframe id="sandbox" sandbox="allow-scripts"></iframe>
 		</section>
 		<section>
 			<div id="bank-data-output"></div>
