--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<nav>
 			<a href="./index.html">Home</a>
 		</nav>
-		<h1>Data Generator</h1>
-		<h2>For Survicalcraft Memory Banks</h2>
+		<h1>Memory Bank Generator</h1>
+		<h2>For Survicalcraft</h2>
 	</header>
 	<main>
 		<hr />
