--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<header>
 		<nav>
 			<a href="./index.html">Home</a>
+			<a href="./docs.html">Docs</a>
 		</nav>
 		<h1>Memory Bank Generator</h1>
 		<h2>For Survicalcraft</h2>
