Added content to the circuit section of the docs of which an image of a graphics artifact from the circuit tiles

--- a/docs.html
+++ b/docs.html
@@ -223,8 +223,10 @@
 		<section id="circuit">
 			<h2>Generated Circuit</h2>
 			<p>
-
+				A circuit is generated alongside the data.
+				The image is made up of multiple screenshots from SurvivalCraft stitched together and may cause some slight artifacts as seen below.
 			</p>
+			<img src="./assets/generated_circuit_tile_stitch_artifact.png" alt="artifact of two circuit tile images stitched together">
 		</section>
 		<hr>
 		<section id="errors">
