Finalized the documentation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<nav>
-			<a href="./index.html">Home</a>
+			<a href="https://sp4cebar.com/">Home</a>
 			<a href="./docs.html">Docs</a>
 		</nav>
 		<h1>Memory Bank Generator</h1>
