Added bug report and contribution urls

--- a/docs.html
+++ b/docs.html
@@ -445,7 +445,12 @@
 			</p>
 		</section>
 	</main>
-	<footer></footer>
+	<footer>
+		<aside>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a>
+		</aside>
+	</footer>
 </body>
 
 </html>
