--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
 			</svg>
 		</div> -->
 	</main>
-	<footer></footer>
+	<footer>
+		<aside>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a>
+		</aside>
+	</footer>
 	<iframe id="sandbox" class="hidden" sandbox="allow-scripts"></iframe>
 	<script type="module" src="./js/index.js"></script>
 </body>
