--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</section>
 		<section>
 			<h2>Circuit</h2>
-			<svg version="2.0" id="reference-circuit"></svg>
+			<svg version="2.0" id="reference-circuit" width="0" height="0"></svg>
 			<p>Feel free to simplify the circuit in your own implementation.</p>
 		</section>
 		
