Added contribute to the documentation, fixed some details of the documentation, made hyperlinks open on a new tab

--- a/docs.html
+++ b/docs.html
@@ -29,6 +29,7 @@
 				<li><a href="#data">Data</a></li>
 				<li><a href="#circuit">Generated Circuit</a></li>
 				<li><a href="#errors">Common Errors</a></li>
+				<li><a href="#contribute">Contribute</a></li>
 				<!-- <li><a href="#faq">FAQ</a></li> -->
 			</ul>
 		</section>
@@ -37,7 +38,7 @@
 			<h2>Description</h2>
 			<p>
 				This tool allows you to easily program the data for memory bank systems. It supports three different use
-				cases: ROM, Selector, and FSM.
+				cases: ROM, Selector ROM, and FSM.
 			<ul>
 				<li><b>ROM: <a href="https://en.wikipedia.org/wiki/Read-only_memory">Read only Memory</a></b><br>for any
 					input value coming in, one programmed output value is coming out. This can be used to make calculators or
@@ -442,6 +443,13 @@
 			<h2>Common Errors</h2>
 			<p>
 
+			</p>
+		</section>
+		<hr>
+		<section id="contribute">
+			<h2>Contribute</h2>
+			<p>
+				If you have an idea for a feature or bug fix for this site, you can <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo">fork</a> it, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction">develop</a> it and make a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork">pull request</a>. If I see it, it works, and I like it I will add it to this project.
 			</p>
 		</section>
 	</main>
