--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<a href="https://sp4cebar.com/">Home</a>
-			<a href="./docs.html">Docs</a>
+			<a href="./docs.html">Documentation</a>
 		</nav>
 		<h1>Memory Bank Generator</h1>
 		<h2>For Survicalcraft</h2>
@@ -73,8 +73,8 @@
 	</main>
 	<footer>
 		<aside>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues" target="_blank" rel="noopener noreferrer">Report Issue</a>
+			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator" target="_blank" rel="noopener noreferrer">Contribute</a>
 		</aside>
 	</footer>
 	<iframe id="sandbox" class="hidden" sandbox="allow-scripts"></iframe>
