--- a/docs.html
+++ b/docs.html
@@ -4,10 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bank Generator</title>
 	<link rel="stylesheet" href="./styles/styles.css">
-	<style>
-	</style>
+	<link rel="logo" type="image/x-icon" href="/assets/memory_bank_asset.png">
+	<title>Bank Generator</title>
 </head>
 
 <body>
