Added a favicon; structured the generator inputs as a grid

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bank Generator</title>
 	<link rel="stylesheet" href="./styles/styles.css">
-	<link rel="logo" type="image/x-icon" href="/assets/memory_bank_asset.png">
+	<!-- <link rel="logo" type="image/x-icon" href="/assets/memory_bank_asset.png"> -->
 	<style>
 	</style>
 </head>
@@ -21,12 +21,13 @@
 	<main>
 		<hr />
 		<section>
-			<div class="space-Below">
+			<h2>Code</h2>
+			<div class="space-Below generator-input-params">
 				<label for="amountInput">amount</label>
 				<input id="amount" name="amountInput" value="1" placeholder="1"></input>
-				<label for="inputSizesInput">inputSizes</label>
+				<label for="inputSizesInput">input sizes or types</label>
 				<input id="inputSizes" name="inputSizesInput" value="4, 4" placeholder="4, 4"></input>
-				<label for="outputSizesInput">outputSizes</label>
+				<label for="outputSizesInput">output sizes or types</label>
 				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
 			</div>
 			<label for="codeInput">code input</label>
