Fixed and verified the example programs

--- a/docs.html
+++ b/docs.html
@@ -99,7 +99,7 @@ output sizes: INT_5
 				</pre>
 					<pre>
 ([x, y]) => {
-	return x - y;
+	return [x - y];
 }
 				</pre>
 				</li>
@@ -147,7 +147,7 @@ output sizes: 4
 					highResDisplay
 					<pre>
 locations: 16
-input sizes: 4
+input sizes: 5
 output sizes: 4
 				</pre>
 					<pre>
