Added content to the common errors section

--- a/docs.html
+++ b/docs.html
@@ -24,6 +24,7 @@
 			<ul>
 				<li><a href="#description">Description</a></li>
 				<li><a href="#code">Code</a></li>
+				<li><a href="#examples">Code Examples</a></li>
 				<li><a href="#types">Data Types</a></li>
 				<li><a href="#data">Data</a></li>
 				<li><a href="#circuit">Generated Circuit</a></li>
@@ -75,6 +76,8 @@
 						Functions</a></li>
 			</ul>
 			</p>
+		</section>
+		<section id="examples">		
 			<h3>Examples</h3>
 			<ol>
 				<li>
@@ -606,7 +609,7 @@ output sizes: 4
 		<section id="errors">
 			<h2>Common Errors</h2>
 			<p>
-
+				There are way too few error messages, if the code doesn't work, please replace the code with one of the <a href="#examples">example programs</a>. 
 			</p>
 		</section>
 		<hr>
